k8s/ingress/ffmpeg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg
spec:
  selector:
    matchLabels:
      run: ffmpeg
  replicas: 1
  template:
    metadata:
      labels:
        run: ffmpeg
    spec:
      containers:
      - name: ffmpeg
        image: ashraf1abdelrasool/ffmpeg:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: ffmpeg
  labels:
    run: ffmpeg
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8084
  type: NodePort
  selector:
    run: ffmpeg
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    run: ffmpeg
  name: ffmpeg
  namespace: asrevo
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: ffmpeg
